--- a/src/pages/ChatPages/Chats/ChatSidebar/ChatSidebar.scss
+++ b/src/pages/ChatPages/Chats/ChatSidebar/ChatSidebar.scss
@@ -5,103 +5,111 @@
   background: #fff;
   box-shadow: 0px 4px 6px 0px rgba(0, 0, 0, 0.06);
   height: auto;
-  display: flex;
-  flex-direction: column;
   width: 90%;
-  overflow-y: auto;
-  height: 80vh;
+  overflow: hidden;
 
-  &::-webkit-scrollbar {
-    width: 8px;
-  }
-
-  &::-webkit-scrollbar-thumb {
-    background-color: rgba(253, 89, 1, 0.2);
-    border-radius: 10rem;
-
-    &:hover {
-      background-color: rgba(253, 89, 1, 0.8);
-    }
-  }
-
-  &::-webkit-scrollbar-track {
-    background-color: transparent;
-    border-radius: 10rem;
-  }
-
-  .person_wise_chat {
+  .chatsidebar_content {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
-    align-items: center;
-    .user_chat {
-      border-radius: 20px;
-      background: #eaeef2;
-      width: 90%;
-      height: 90px;
-      flex-shrink: 0;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-      padding: 10px;
+    overflow-y: auto;
+    height: 80dvh;
 
-      .left {
+    &::-webkit-scrollbar {
+      width: 8px;
+    }
+
+    &::-webkit-scrollbar-thumb {
+      background-color: rgba(253, 89, 1, 0.2);
+      border-radius: 10rem;
+
+      &:hover {
+        background-color: rgba(253, 89, 1, 0.8);
+      }
+    }
+
+    &::-webkit-scrollbar-track {
+      background-color: transparent;
+      border-radius: 10rem;
+    }
+
+    .person_wise_chat {
+      display: flex;
+      flex-direction: column;
+      justify-content: flex-start;
+      align-items: center;
+      .user_chat {
+        border-radius: 20px;
+        background: #eaeef2;
+        width: 90%;
+        height: 90px;
+        flex-shrink: 0;
         display: flex;
         justify-content: center;
         align-items: center;
-        margin-right: auto !important;
+        padding: 10px;
 
-        .rounded_img {
-          border-radius: 50%;
-          height: 50px;
-          width: 50px;
+        .left {
+          display: flex;
+          justify-content: center;
+          align-items: center;
+          margin-right: auto !important;
+
+          .rounded_img {
+            border-radius: 50%;
+            height: 50px;
+            width: 50px;
+          }
+
+          .title_and_message {
+            margin-left: 10px;
+            .name_title {
+              margin: 0;
+              color: #2f2f2f;
+              font-family: Poppins;
+              font-size: 18px;
+              font-style: normal;
+              font-weight: 500;
+              line-height: normal;
+            }
+            .message_title {
+              color: #858585;
+              font-family: Poppins;
+              font-size: 12px;
+              font-style: normal;
+              font-weight: 400;
+              line-height: normal;
+            }
+          }
         }
-
-        .title_and_message {
-          margin-left: 10px;
-          .name_title {
-            margin: 0;
+        .right {
+          display: flex;
+          flex-direction: column;
+          align-items: flex-end;
+          .time {
             color: #2f2f2f;
             font-family: Poppins;
-            font-size: 18px;
+            font-size: 11px;
             font-style: normal;
             font-weight: 500;
             line-height: normal;
           }
-          .message_title {
-            color: #858585;
-            font-family: Poppins;
-            font-size: 12px;
-            font-style: normal;
-            font-weight: 400;
-            line-height: normal;
+          .notification {
+            background: red;
+            height: 20px;
+            width: 20px;
+            border-radius: 50%;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            font-size: 13px;
+            color: #fff;
           }
         }
       }
-      .right {
-        display: flex;
-        flex-direction: column;
-        align-items: flex-end;
-        .time {
-          color: #2f2f2f;
-          font-family: Poppins;
-          font-size: 11px;
-          font-style: normal;
-          font-weight: 500;
-          line-height: normal;
-        }
-        .notification {
-          background: red;
-          height: 20px;
-          width: 20px;
-          border-radius: 50%;
-          display: flex;
-          justify-content: center;
-          align-items: center;
-          font-size: 13px;
-          color: #fff;
-        }
-      }
+    }
+
+    .person_wise_chat:last-of-type {
+      padding-bottom: 1em;
     }
   }
 }
